# crabd

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  READMEmd  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml  rust.yml
src/: app.rs  event.rs  logger.rs  main.rs  utils.rs
src/components/: common.rs  component.rs  container_info.rs  container_info_block.rs  container_table.rs  image_table.rs  info_block.rs  mod.rs  network_table.rs  volume_table.rs
src/docker/: client.rs
src/ui/: container_table.rs  image_table.rs  mod.rs  network_table.rs  resource_table.rs  volume_table.rs
src/views/: common.rs  container_info.rs  container_list.rs  container_list_table.rs  container_table.rs  mod.rs
