[package]
name = "tock"
version = "0.1.0"
authors = ["Sertan Canpolat <58915038+scnplt@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
bollard = "0.18.1"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = {version = "1.44.1", features = ["full"]}
